src/objects/CEC_Factory_Details__c.object
<CustomObject>
    <description>CEC - List of Factory details</description>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Country__r.Name</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>CEC_Case_Market_Mapping__c</referenceTo>
        <relationshipName>Factory_Detailss</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Multiple emails can be entered with comma separated values</description>
        <label>Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textile</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Factory Detail</label>
    <listViews>
        <fullName>CEC_ANZ_Queue_CEC_Factory_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC ANZ Queue</label>
        <queue>CEC_ANZ_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Brazil_Planitox_Queue_CEC_Factory_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Brazil Planitox Queue</label>
        <queue>CEC_Brazil_Planitox_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Brazil_Queue_CEC_Factory_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Brazil Queue</label>
        <queue>CEC_Brazil_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Middle_Americas_Queue_CEC_Factory_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Middle Americas Queue</label>
        <queue>CEC_Middle_Americas_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_South_Africa_Queue_CEC_Factory_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC South Africa Queue</label>
        <queue>CEC_South_Africa_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Southern_Cone_Queue_CEC_Factory_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Southern Cone Queue</label>
        <queue>CEC_Southern_Cone_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>FactoryName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factory Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>